--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "dapp-names",
+  "name": "dapp-drive",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev-clean": "rm -rf .next && next dev",
+    "dev": "next dev -p 3004",
+    "dev-clean": "rm -rf .next && next dev -p 3004",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -95,6 +95,9 @@
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0"
+  },
+  "resolutions": {
+    "cipher-base": "https://github.com/TrustlessComputer/patched-cipher-base.git"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
