--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,16 @@
 {
-  "semi": true,
-  "trailingComma": "all",
-  "singleQuote": true,
-  "printWidth": 85,
+  "trailingComma": "es5",
   "tabWidth": 2,
-  "endOfLine": "auto"
+  "semi": true,
+  "singleQuote": true,
+  "printWidth": 80,
+  "overrides": [
+    {
+      "files": ["*.json", "*.js", "*.ts", "*.tsx", "*.scss"],
+      "options": {
+        "tabWidth": 2
+      }
+    }
+  ],
+  "arrowParens": "avoid"
 }
