--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,18 +1,36 @@
 {
-  "processors": ["stylelint-processor-styled-components"],
+  "extends": "stylelint-config-standard",
   "formatter": "stylelint-checkstyle-formatter",
-  "plugins": ["stylelint-a11y"],
+  "plugins": ["stylelint-scss"],
+  "overrides": [
+    {
+      "files": ["*.scss", "**/*.scss"],
+      "customSyntax": "postcss-scss"
+    }
+  ],
   "rules": {
+    "import-notation": "string",
+    "at-rule-no-unknown": null,
+    "function-no-unknown": null,
+    "property-no-unknown": null,
+    "no-descending-specificity": null,
+    "custom-property-pattern": null,
+    "selector-pseudo-class-no-unknown": null,
+    "selector-pseudo-element-no-unknown": null,
+    "max-line-length": null,
+    "declaration-block-no-redundant-longhand-properties": null,
+    "no-duplicate-selectors": null,
     "selector-class-pattern": [
       ".*",
       {
         "resolveNestedSelectors": true
       }
+    ],
+    "value-keyword-case": [
+      "lower",
+      {
+        "ignoreKeywords": "[/ease(?:[A-Z][a-z]+){2,}/]"
+      }
     ]
-  },
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-styled-components",
-    "stylelint-config-prettier"
-  ]
+  }
 }
