--- a/package.json
+++ b/package.json
@@ -18,22 +18,17 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@rollup/plugin-inject": "^5.0.3",
     "@trustless-computer/dapp-core": "^0.0.6",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
-    "@web3-react/core": "^8.1.2-beta.0",
-    "@web3-react/metamask": "^8.1.2-beta.0",
+    "@web3-react/core": "^8.2.0",
+    "@web3-react/metamask": "^8.2.0",
     "axios": "^1.3.4",
     "bignumber.js": "^9.1.1",
     "bip32": "^4.0.0",
     "bitcoin-address-validation": "^2.2.1",
     "bitcoinjs-lib": "^6.1.0",
-    "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
-    "cheerio": "^1.0.0-rc.12",
-    "cookie-parser": "^1.4.6",
     "copy-to-clipboard": "^3.3.3",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -43,41 +38,41 @@
     "gsap": "^3.11.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "next": "13.3.0",
-    "patch-package": "^6.5.1",
+    "next": "^13.4.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-audio-visualizers": "^0.1.1",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.9",
-    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-inlinesvg": "^3.0.2",
     "react-jazzicon": "^1.0.4",
     "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
-    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "6.4.3",
     "react-share": "^4.4.1",
     "redux": "^4.2.1",
     "sass": "^1.62.0",
     "sats-connect": "^0.1.11",
-    "serve-static": "^1.15.0",
-    "stream": "^0.0.2",
     "styled-components": "^5.3.9",
-    "swr": "^2.1.2",
-    "trustless-computer-sdk": "https://github.com/TrustlessComputer/tc-sdk#v0.1.33.18_test",
+    "swr": "^2.1.5",
+    "tc-connect": "https://github.com/TrustlessComputer/tc-connect#v0.0.0.58_test",
+    "trustless-computer-sdk": "https://github.com/TrustlessComputer/tc-sdk#v0.1.34",
     "typescript": "5.0.4",
     "unzipit": "^1.4.2",
-    "use-async-effect": "^2.2.7"
+    "use-async-effect": "^2.2.7",
+    "yet-another-react-lightbox": "^3.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@types/lodash": "^4.14.194",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.35",
+    "@types/react-dom": "18.0.11",
     "@types/react-pdf": "^6.2.0",
     "@types/react-redux": "^7.1.25",
     "@types/react-responsive-masonry": "^2.1.0",
