--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,19 @@
     "source.fixAll.eslint": true
   },
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "cSpell.words": [
+    "bignumber",
+    "bitcoinerlab",
+    "bitcoinjs",
+    "checkstyle",
+    "commitlint",
+    "formik",
+    "inlinesvg",
+    "jazzicon",
+    "reduxjs",
+    "sats",
+    "secp",
+    "unzipit"
+  ]
 }
