--- a/package.json
+++ b/package.json
@@ -14,24 +14,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@bitcoinerlab/secp256k1": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.3",
-    "@rollup/plugin-inject": "^5.0.3",
     "@trustless-computer/dapp-core": "^0.0.6",
     "@web3-react/core": "^8.2.0",
     "@web3-react/metamask": "^8.2.0",
     "axios": "^1.3.4",
     "bignumber.js": "^9.1.1",
-    "bip32": "^4.0.0",
     "bitcoin-address-validation": "^2.2.1",
-    "bitcoinjs-lib": "^6.1.0",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
     "express": "^4.18.2",
     "file-type": "^16.5.4",
     "formik": "^2.2.9",
@@ -51,6 +45,7 @@
     "react-jazzicon": "^1.0.4",
     "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "6.4.3",
     "react-share": "^4.4.1",
     "redux": "^4.2.1",
@@ -59,7 +54,7 @@
     "styled-components": "^5.3.9",
     "swr": "^2.1.5",
     "tc-connect": "https://github.com/TrustlessComputer/tc-connect#v0.0.0.58_test",
-    "trustless-computer-sdk": "https://github.com/TrustlessComputer/tc-sdk#v0.1.34",
+    "trustless-computer-sdk": "https://github.com/TrustlessComputer/tc-sdk#v0.1.36.14_test",
     "typescript": "5.0.4",
     "unzipit": "^1.4.2",
     "use-async-effect": "^2.2.7",
@@ -79,6 +74,8 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
