feat: integrate sign transaction new wallet

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "ethers": "^6.4.0",
     "express": "^4.18.2",
     "file-type": "^16.5.4",
     "formik": "^2.2.9",
@@ -53,7 +54,7 @@
     "sats-connect": "^0.1.11",
     "styled-components": "^5.3.9",
     "swr": "^2.1.5",
-    "tc-connect": "https://github.com/TrustlessComputer/tc-connect#v0.0.0.58_test",
+    "tc-connect": "https://github.com/TrustlessComputer/tc-connect#v0.0.0.60_test",
     "trustless-computer-sdk": "https://github.com/TrustlessComputer/tc-sdk#v0.1.36.14_test",
     "typescript": "5.0.4",
     "unzipit": "^1.4.2",
@@ -73,9 +74,9 @@
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "eslint-config-prettier": "^8.8.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
