--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "ethers": "^6.4.0",
     "file-type": "^16.5.4",
     "formik": "^2.2.9",
     "gsap": "^3.11.5",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
     "next": "^13.4.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
@@ -50,8 +50,7 @@
     "sass": "^1.62.0",
     "sats-connect": "^0.1.11",
     "styled-components": "^5.3.9",
-    "swr": "^2.1.5",
-    "tc-connect": "https://github.com/TrustlessComputer/tc-connect#v0.0.0.60_test",
+    "tc-connect": "https://github.com/TrustlessComputer/tc-connect#v0.0.0.61_test",
     "trustless-computer-sdk": "https://github.com/TrustlessComputer/tc-sdk#v0.1.36.14_test",
     "typescript": "5.0.4",
     "unzipit": "^1.4.2",
