--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "typescript": "5.0.4",
     "unzipit": "^1.4.2",
     "use-async-effect": "^2.2.7",
+    "uuid": "^9.0.0",
     "yet-another-react-lightbox": "^3.5.3"
   },
   "devDependencies": {
