feat: add about landing page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,21 @@
     "source.fixAll.eslint": true
   },
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "cSpell.words": [
+    "aliquam",
+    "amet",
+    "arcu",
+    "Eget",
+    "eleifend",
+    "feugiat",
+    "molestie",
+    "neque",
+    "orci",
+    "Pharetra",
+    "pretium",
+    "pulvinar",
+    "senectus",
+    "sreen"
+  ]
 }
