--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "next": "^13.4.0",
+    "nextjs-progressbar": "^0.0.16",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-audio-visualizers": "^0.1.1",
@@ -45,9 +46,11 @@
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "6.4.3",
     "react-share": "^4.4.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "sass": "^1.62.0",
     "sats-connect": "^0.1.11",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
     "tc-connect": "https://github.com/TrustlessComputer/tc-connect#v0.0.0.61_test",
     "trustless-computer-sdk": "https://github.com/TrustlessComputer/tc-sdk#v0.1.36.14_test",
@@ -67,6 +70,7 @@
     "@types/react-pdf": "^6.2.0",
     "@types/react-redux": "^7.1.25",
     "@types/react-responsive-masonry": "^2.1.0",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "eslint": "8.38.0",
