--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
