chore: update env

--- a/envs/.env.develop
+++ b/envs/.env.develop
@@ -8,5 +8,5 @@ NEXT_PUBLIC_CHAIN_ID=22213
 NEXT_PUBLIC_ARTIFACT_CONTRACT=0x16EfDc6D3F977E39DAc0Eb0E123FefFeD4320Bc0
 NEXT_PUBLIC_BNS_CONTRACT=0x8b46F89BBA2B1c1f9eE196F43939476E79579798
 NEXT_PUBLIC_BFS_CONTRACT=0x8BAA6365028894153DEC048E4F4e5e6D2cE99C58
-NEXT_PUBLIC_TC_WEB_WALLET_URL='https://browser-beta.trustlesswallet.io/'
+NEXT_PUBLIC_TC_WEB_WALLET_URL='https://newbitcoinwallet.io/'
 NEXT_PUBLIC_WALLET_CONNECT_URL='https://wadary.regtest.trustless.computer/relayer'
