refactor: remove reduntdant packages

--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "axios": "^1.3.4",
     "bignumber.js": "^9.1.1",
     "bip32": "^4.0.0",
+    "bip39": "^3.1.0",
     "bitcoin-address-validation": "^2.2.1",
     "bitcoinjs-lib": "^6.1.0",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "file-type": "^16.5.4",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
@@ -56,18 +57,17 @@
     "react-jazzicon": "^1.0.4",
     "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
-    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "6.4.3",
     "react-share": "^4.4.1",
     "redux": "^4.2.1",
     "sass": "^1.62.0",
-    "sats-connect": "^0.1.11",
     "styled-components": "^5.3.9",
     "trustless-computer-sdk": "https://github.com/TrustlessComputer/tc-sdk#v0.1.38",
     "typescript": "5.0.4",
     "unzipit": "^1.4.2",
     "use-async-effect": "^2.2.7",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "web3": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
