--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "@types/react-dom": "18.0.11",
     "@types/react-pdf": "^6.2.0",
     "@types/react-redux": "^7.1.25",
-    "@types/react-responsive-masonry": "^2.1.0",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -88,13 +87,6 @@
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
-    "prettier": "^2.8.7",
-    "stylelint": "^15.5.0",
-    "stylelint-a11y": "^1.2.3",
-    "stylelint-checkstyle-formatter": "^0.1.2",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-standard": "^33.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0"
+    "prettier": "^2.8.7"
   }
 }
