--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,25 @@
   },
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "cSpell.words": ["jazzicon", "Jazzicon"]
+  "cSpell.words": ["jazzicon", "Jazzicon"],
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#4ed0cc",
+    "activityBar.background": "#4ed0cc",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#cc4fd0",
+    "activityBarBadge.foreground": "#15202b",
+    "commandCenter.border": "#15202b99",
+    "sash.hoverBorder": "#4ed0cc",
+    "statusBar.background": "#31bab5",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#26928e",
+    "statusBarItem.remoteBackground": "#31bab5",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#31bab5",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#31bab599",
+    "titleBar.inactiveForeground": "#15202b99"
+  },
+  "peacock.color": "#31bab5"
 }
